--- a/Resume/0.html
+++ b/Resume/0.html
@@ -104,13 +104,11 @@
                             <h3 class="job-title">Express-memo</h3>
                             <div class="time"><a href="https://github.com/HuangHongRui/Express-memo" target="_bank">项目地址</a></div>
                         </div><!--//upper-row-->
-                        <div class="company">线上便笺</div>
+                        <div class="company">便笺</div>
                     </div><!--//meta-->
                     <div class="details">
-                        <p>项目简介: 这是一个在线便笺，进入首页可看所有用户的便签(会显示创建或更新时间与便笺主人昵称)，想要实现新增、删除、修改属于自己的便签是需要登录GitHub账号才能.</p>
-                        <p>项目详情: 使用使用基于Node.js的Express框架实现，前端使用前后端联调，代码结构的组织和模块化开发方式，后端使用Express、Nodejs调试、中间件、路由，数据库使用sequelize. 最后使用Webpack 和 Less 构建, pm2部署.</p>
-                        <p>技术栈： Node.js/ES6/Webpack/MVC概念/<npm></npm></p>
-                        <p>效果地址: <a href="http://memo.luckyman.xyz/" target="_bank">http://memo.luckyman.xyz/</a></p>
+                        <p>使用基于Node.js的Express框架实现此在线便签.支持使用GitHub登录，支持对便笺进行增删改.</p>  
+                        <p>使用前后端联调，模块化开发方式，数据库使用sequelize，使用 pm2 部署</p>
 
                     </div><!--//details-->
                 </div><!--//item-->
