--- a/Resume/index.html
+++ b/Resume/index.html
@@ -49,20 +49,11 @@
         <div class="education-container container-block">
           <h2 class="container-block-title">个人描述</h2>
           <div class="item">
-            <h5 class="meta">我是一个对前端和健身由衷热爱、有趣的前端工程师。</h5>
+            <h5 class="meta">我是一个对前端和健身由衷热爱、有着轻微强迫症、注重代码规范、有趣的前端工程师。</h5>
             <h5 class="degree">目前正在寻找前端工程师岗位的工作机会，希望借此为 贵司 献上我的一点绵薄之力，快招我到碗里来吧！</h5>
             <div class="time"></div>
           </div>
         </div>
-        <!--
-        <div class="languages-container container-block">
-          <h2 class="container-block-title">语言</h2>
-          <ul class="list-unstyled interests-list">
-            <li>潮汕话 <span class="lang-desc">(母语)</span></li>
-            <li>普通话 <span class="lang-desc">(常用)</span></li>
-            <li>英语 <span class="lang-desc">(戴增)</span></li>
-          </ul>
-        </div><!--//interests-->
 
         <div class="interests-container container-block">
           <h2 class="container-block-title">兴趣爱好</h2>
@@ -104,11 +95,33 @@
             <div class="details">
               <p>项目简介: 这是一个在线便笺，进入首页可看所有用户的便签(会显示创建或更新时间与便笺主人昵称)，想要实现新增、删除、修改属于自己的便签是需要登录GitHub账号.</p>
               <p>项目详情: 使用使用基于Node.js的Express框架实现，前端使用前后端联调，代码结构的组织和模块化开发方式，后端使用Express、Nodejs调试、中间件、路由，数据库使用sequelize. 最后使用Webpack 和 Less 构建, pm2部署.</p>
-              <p>技术栈： Node.js/ES6/Webpack/MVC概念/<npm></npm></p>
+              <p>技术栈： Node.js/ES6/Webpack/MVC概念<npm></npm></p>
               <p>效果地址: <a href="http://memo.luckyman.xyz/" target="_bank">http://memo.luckyman.xyz</a></p>
 
             </div><!--//details-->
           </div><!--//item-->
+
+<!--
+          <div class="item">
+            <div class="meta">
+              <div class="upper-row">
+                <h3 class="job-title">Vue Todo&Resume</h3>
+                <div class="time"><a href="https://github.com/HuangHongRui/Express-memo" target="_bank">项目地址</a></div>
+              </div>
+              <div class="company">线上便笺</div>
+            </div>
+            <div class="details">
+              <p>项目简介: .</p>
+              <p>项目详情: .</p>
+              <p>技术栈： <npm></npm></p>
+              <p>效果地址: <a href="http://memo.luckyman.xyz/" target="_bank">http://memo.luckyman.xyz</a></p>
+
+            </div>
+          </div>
+-->
+
+
+
         </section><!--//section-->
 
         <section class="section projects-section">
@@ -199,17 +212,6 @@
 
     </div><!--//main-body-->
   </div>
-
-
-
-
-
-
-
-
-
-
-
 
   <footer class="footer">
     <div class="text-center">
