--- a/Resume/index.html
+++ b/Resume/index.html
@@ -93,32 +93,32 @@
               <div class="company">线上便笺</div>
             </div><!--//meta-->
             <div class="details">
-              <p>项目简介: 这是一个在线便笺，进入首页可看所有用户的便签(会显示创建或更新时间与便笺主人昵称)，想要实现新增、删除、修改属于自己的便签是需要登录GitHub账号.</p>
-              <p>项目详情: 使用使用基于Node.js的Express框架实现，前端使用前后端联调，代码结构的组织和模块化开发方式，后端使用Express、Nodejs调试、中间件、路由，数据库使用sequelize. 最后使用Webpack 和 Less 构建, pm2部署.</p>
-              <p>技术栈： Node.js/ES6/Webpack/MVC概念<npm></npm></p>
+              <p>项目简介: 这是一个单页应用项目，进入首页可看所有用户的便签(会显示创建或更新时间与便笺主人昵称)，想要实现新增、删除、修改便签只需登录GitHub账号，数据同步，自动瀑布流排版、鼠标移动等功能。.</p>
+              <p>项目详情: 使用使用基于Node.js的Express框架实现，前端使用代码结构的组织和模块化开发方式、Webpack 和 Less 构建.后端使用Express、Nodejs调试、中间件、路由，数据库使用sequelize.最后pm2部署上线.</p>
+              <p>技术栈： Node.js/ES6/Webpack/MVC概念..</p>
               <p>效果地址: <a href="http://memo.luckyman.xyz/" target="_bank">http://memo.luckyman.xyz</a></p>
 
             </div><!--//details-->
           </div><!--//item-->
 
-<!--
+
           <div class="item">
             <div class="meta">
               <div class="upper-row">
-                <h3 class="job-title">Vue Todo&Resume</h3>
-                <div class="time"><a href="https://github.com/HuangHongRui/Express-memo" target="_bank">项目地址</a></div>
+                <h3 class="job-title">UI_Module:</h3>
+                <div class="time"><a href="https://github.com/HuangHongRui/UI_Module" target="_bank">仓库更多</a></div>
               </div>
-              <div class="company">线上便笺</div>
+              <div class="company">封装 &amp; 插件库</div>
             </div>
             <div class="details">
-              <p>项目简介: .</p>
-              <p>项目详情: .</p>
-              <p>技术栈： <npm></npm></p>
-              <p>效果地址: <a href="http://memo.luckyman.xyz/" target="_bank">http://memo.luckyman.xyz</a></p>
+              <p>轮__播： <a href="https://huanghongrui.github.io/UI_Module/Carousel%20%7C%20%E5%B7%A6%E5%8F%B3%E8%BD%AE%E6%92%AD/index.html"> 效果地址 </a>.</p>
+              <p>懒加载： <a href="https://huanghongrui.github.io/UI_Module/Expose%20%7C%20%E6%9B%9D%E5%85%89/index.html"> 效果预览 </a>.</p>
+              <p>瀑布流： <a href="https://huanghongrui.github.io/SomeDemo/Cascade%20%7C%20%E7%80%91%E5%B8%83%E6%B5%81/index.html"> 效果预览 </a>.</p>
+              <p>木桶流： <a href="https://huanghongrui.github.io/UI_Module/Wooden%20%7C%20%E6%9C%A8%E6%A1%B6%E6%B5%81/index.html" target="_blank"> 效果预览 </a>.</p>
 
             </div>
           </div>
--->
+
 
 
 
