--- a/Resume/index.html
+++ b/Resume/index.html
@@ -49,7 +49,7 @@
         <div class="education-container container-block">
           <h2 class="container-block-title">个人描述</h2>
           <div class="item">
-            <h5 class="meta">我是一个对前端和健身由衷热爱、有着轻微强迫症、注重代码规范、有趣的前端工程师。</h5>
+            <h5 class="meta">我是一个对前端和美剧由衷热爱、有着轻微强迫症、注重代码规范、有趣的前端工程师。</h5>
             <h5 class="degree">目前正在寻找前端工程师岗位的工作机会，希望借此为 贵司 献上我的一点绵薄之力，快招我到碗里来吧！</h5>
             <div class="time"></div>
           </div>
@@ -71,13 +71,12 @@
         <section class="section summary-section">
           <h2 class="section-title"><i class="fa fa-user"></i>基本信息 | BasicInfo</h2>
           <div class="summary">
-            <p>应聘岗位: Web前端开发工程师</p>
-            <p>前端经验: 1年以上</p>
-            <p>常用ID: Raine</p>
-            <p>年龄: 23 | 男</p>
-            <p>Blog: <a href="http://www.jianshu.com/u/4fe15f8f16d3"> >>简书地址</a></p>
-            <p>GitHub: <a href="https://github.com/HuangHongRui"> >>https://github.com/HuangHongRui</a></p>
-            <p>期望薪资: 9K </p>
+            <p>常用ID：Raine</p>
+            <p>年龄：23 | 男</p>
+            <p>前端经验：1年以上</p>
+            <p>求职意向：前端工程师</p>
+            <p>GitHub：<a href="https://github.com/HuangHongRui"> >> https://github.com/HuangHongRui </a></p>
+            <p>Blog：<a href="http://www.jianshu.com/u/4fe15f8f16d3"> >> http://www.jianshu.com/u/4fe15f8f16d3 </a></p>
           </div><!--//summary-->
         </section><!--//section-->
 
@@ -88,7 +87,7 @@
             <div class="meta">
               <div class="upper-row">
                 <h3 class="job-title">Express-memo</h3>
-                <div class="time"><a href="https://github.com/HuangHongRui/Express-memo" target="_bank">项目地址</a></div>
+                <div class="time"><a href="https://github.com/HuangHongRui/Express-memo" target="_bank">项目源码</a></div>
               </div><!--//upper-row-->
               <div class="company">线上便笺</div>
             </div><!--//meta-->
@@ -97,25 +96,40 @@
               <p>项目详情: 使用使用基于Node.js的Express框架实现，前端使用代码结构的组织和模块化开发方式、Webpack 和 Less 构建.后端使用Express、Nodejs调试、中间件、路由，数据库使用sequelize.最后pm2部署上线.</p>
               <p>技术栈： Node.js/ES6/Webpack/MVC概念..</p>
               <p>效果地址: <a href="http://memo.luckyman.xyz/" target="_bank">http://memo.luckyman.xyz</a></p>
-
             </div><!--//details-->
+            <hr/>
           </div><!--//item-->
 
+          <div class="item">
+            <div class="meta">
+              <div class="upper-row">
+                <h3 class="job-title">Corporate Website</h3>
+                <div class="time"><a href="https://github.com/HuangHongRui/Website_Page" target="_bank">项目源码</a></div>
+              </div><!--//upper-row-->
+              <div class="company">企业站实现</div>
+            </div><!--//meta-->
+            <div class="details">
+              <p>项目简介: 一个使用webapck模块化开发的个人企业网站.</p>
+              <p>项目详情: 良好的页面文档结构,使用封装组件和使用Webpack构建.</p>
+              <p>项目收获：了解企业站开发模式，webpack模块化管理代码</p>
+              <p>效果地址: <a href="https://huanghongrui.github.io/Website_Page/bin/" target="_bank">https://huanghongrui.github.io/Website_Page/bin</a></p>
+            </div><!--//details-->
+            <hr/>
+          </div><!--//item-->
 
           <div class="item">
             <div class="meta">
               <div class="upper-row">
                 <h3 class="job-title">UI_Module:</h3>
-                <div class="time"><a href="https://github.com/HuangHongRui/UI_Module" target="_bank">仓库更多</a></div>
+                <div class="time"><a href="https://github.com/HuangHongRui/UI_Module" target="_bank">仓库源码</a></div>
               </div>
               <div class="company">封装 &amp; 插件库</div>
             </div>
             <div class="details">
-              <p>轮__播： <a href="https://huanghongrui.github.io/UI_Module/Carousel%20%7C%20%E5%B7%A6%E5%8F%B3%E8%BD%AE%E6%92%AD/index.html"> 效果地址 </a>.</p>
-              <p>懒加载： <a href="https://huanghongrui.github.io/UI_Module/Expose%20%7C%20%E6%9B%9D%E5%85%89/index.html"> 效果预览 </a>.</p>
-              <p>瀑布流： <a href="https://huanghongrui.github.io/SomeDemo/Cascade%20%7C%20%E7%80%91%E5%B8%83%E6%B5%81/index.html"> 效果预览 </a>.</p>
+              <p>轮__播： <a href="https://huanghongrui.github.io/UI_Module/Carousel%20%7C%20%E5%B7%A6%E5%8F%B3%E8%BD%AE%E6%92%AD/index.html" target="_blank"> 效果预览 </a>.</p>
+              <p>懒加载： <a href="https://huanghongrui.github.io/UI_Module/Expose%20%7C%20%E6%9B%9D%E5%85%89/index.html" target="_blank"> 效果预览 </a>.</p>
+              <p>瀑布流： <a href="https://huanghongrui.github.io/SomeDemo/Cascade%20%7C%20%E7%80%91%E5%B8%83%E6%B5%81/index.html" target="_blank"> 效果预览 </a>.</p>
               <p>木桶流： <a href="https://huanghongrui.github.io/UI_Module/Wooden%20%7C%20%E6%9C%A8%E6%A1%B6%E6%B5%81/index.html" target="_blank"> 效果预览 </a>.</p>
-
             </div>
           </div>
 
