--- a/Resume/index.html
+++ b/Resume/index.html
@@ -103,6 +103,23 @@
           <div class="item">
             <div class="meta">
               <div class="upper-row">
+                <h3 class="job-title">TodoList</h3>
+                <div class="time"><a href="https://github.com/HuangHongRui/Vue_ToDo" target="_bank">项目源码</a></div>
+              </div><!--//upper-row-->
+              <div class="company"> Vue版 </div>
+            </div><!--//meta-->
+            <div class="details">
+              <p>技术架构：Vue + webpack +es6.</p>
+              <p>项目简介：实现注册、登录、记录事项、将用户数据存储于LeanCloud.</p>
+              <p>项目收获：第一次使用Vue开发项目，基本了解Vue.js的项目开发方式。.</p>
+              <p>效果地址: <a href="https://huanghongrui.github.io/Vue_ToDo/LeanCloud/page.html" target="_bank">https://huanghongrui.github.io/Website_Page</a></p>
+            </div><!--//details-->
+            <hr/>
+          </div><!--//item-->
+
+          <div class="item">
+            <div class="meta">
+              <div class="upper-row">
                 <h3 class="job-title">Corporate Website</h3>
                 <div class="time"><a href="https://github.com/HuangHongRui/Website_Page" target="_bank">项目源码</a></div>
               </div><!--//upper-row-->
