--- a/Resume/index.html
+++ b/Resume/index.html
@@ -149,113 +149,99 @@
               <p>木桶流： <a href="https://huanghongrui.github.io/UI_Module/Wooden%20%7C%20%E6%9C%A8%E6%A1%B6%E6%B5%81/index.html" target="_blank"> 效果预览 </a>.</p>
             </div>
           </div>
-
-
-
-
         </section><!--//section-->
 
         <section class="section projects-section">
           <h2 class="section-title"><i class="fa fa-archive"></i>掌握技能 | Skill</h2>
           <div class="intro">
-            <p></p>
           </div><!--//intro-->
           <h4>HTML &amp; CSS</h4>
           <div class="item">
-            <span class="project-title"><a href="#"></a></span> - <span class="project-tagline">遵循W3C规范，使用合理的结构和样式编写兼容主流浏览器的页面；.</span>
+            <span class="project-title"><a href="#"></a></span> - <span class="project-tagline">熟悉HTML、CSS、页面架构和布局，对Web标准和标签语义化有深入理解。</span>
+          </div>
+          <div class="item">
+            <span class="project-title"><a href="#"></a></span> - <span class="project-tagline">熟悉并能使用Scss，less和Stylus，postcss预处理器编写前端样式。</span>
           </div><!--//item-->
           <div class="item">
-            <span class="project-title"><a href="#"></a></span> - <span class="project-tagline">掌握HTML标签，能写出语义化的HTML，代码可读性/兼容性良好的页面文档结构.</span>
-          </div><!--//item-->
+            <span class="project-title"><a href="#"></a></span> - <span class="project-tagline">了解及HTML5新标签及CSS3样式及动画。</span>
+          </div>
           <div class="item">
-            <span class="project-title"><a href="#"></a></span> - <span class="project-tagline">熟悉盒模型、浮动定位、<a href="http://www.jianshu.com/p/854a5a494ddd">BFC(文章)</a>、flex、栅格、响应式.</a></span>
-        </div><!--//item-->
-        <h4>JavaScript</h4>
-        <div class="item">
-          <span class="project-title"><a href="#"></a></span> - <span class="project-tagline">熟悉原生Javascript，能脱离jQuery等类库编码；</span>
-        </div><!--//item-->
-        <div class="item">
-          <span class="project-title"><a href="#"></a></span> - <span class="project-tagline">能运用模块化、面向对象的方式编程.</span>
-        </div><!--//item-->
-        <div class="item">
-          <span class="project-title"><a href="#"></a></span> - <span class="project-tagline">了解HTTP协议，以及熟悉运用Ajax通过JSON数据接口与后台数据接口进行数据交互.</span>
-        </div><!--//item-->
-        <h4>框架 &amp; 工具</h4>
-        <div class="item">
-          <span class="project-title"><a href="#"></a></span> - <span class="project-tagline">熟悉 Webpack Gulp 等前端自动化工具.</span>
-        </div><!--//item-->
-        <div class="item">
-          <span class="project-title"><a href="#"></a></span> - <span class="project-tagline">熟悉 Less Sass CSS预处理和模块化工具</span>
-        </div><!--//item-->
-        <div class="item">
-          <span class="project-title"><a href="#"></a></span> - <span class="project-tagline">了解Bootstrap、requirejs 等前端框架工具</span>
-        </div><!--//item-->
-        <div class="item">
-          <span class="project-title"><a href="#"></a></span> - <span class="project-tagline">使用 Linux ＆ 命令行</span>
-        </div><!--//item-->
-        <div class="item">
-          <span class="project-title"><a href="#"></a></span> - <span class="project-tagline">使用 Vim ＆ WebStrom</span>
-        </div><!--//item-->
-        <div class="item">
-          <span class="project-title"><a href="#"></a></span> - <span class="project-tagline">熟练使用 Git</span>
-        </div><!--//item-->
-        <div class="item">
-          <span class="project-title"><a href="#"></a></span> - <span class="project-tagline">了解 Vue</span>
-        </div><!--//item-->
-      </section><!--//section-->
+            <span class="project-title"><a href="#"></a></span> - <span class="project-tagline">了解移动端开发与微信小程序开发。</span>
+          </div><!--//item-->
 
-      <section class="skills-section section">
-        <h2 class="section-title"><i class="fa fa-rocket"></i>精通程度 &amp; Proficiency</h2>
-        <div class="skillset">        
+          <h4>JavaScript</h4>
           <div class="item">
-            <h3 class="level-title">HTML5</h3>
-            <div class="level-bar">
-              <div class="level-bar-inner" data-level="85%">
-              </div>                                      
-            </div><!--//level-bar-->                                 
+            <span class="project-title"><a href="#"></a></span> - <span class="project-tagline">熟悉原生Javascript，能脱离jQuery等类库编码。</span>
+          </div><!--//item-->
+          <div class="item">
+            <span class="project-title"><a href="#"></a></span> - <span class="project-tagline">能运用模块化、面向对象的方式编程。</span>
+          </div><!--//item-->
+          <div class="item">
+            <span class="project-title"><a href="#"></a></span> - <span class="project-tagline">了解HTTP协议，以及熟悉运用Ajax通过JSON数据接口与后台数据接口进行数据交互。</span>
+          </div><!--//item-->
+          <div class="item">
+            <span class="project-title"><a href="#"></a></span> - <span class="project-tagline">熟悉掌握原生Javascript，掌握重要概念如： 原型， 闭包， 作用域链， 面向对象， 异步流程控制等。能够根据面向对象思想利用JS/jQuery 封装 常用插件。</span>
+          </div>
+
+          <h4>Tool &amp; Frame</h4>
+          <div class="item">
+            <span class="project-title"><a href="#"></a></span> - <span class="project-tagline">能够使用Webpack、gulp、requirejs前端构建工具搭建前端开发环境。</span>
+          </div><!--//item-->
+          <div class="item">
+            <span class="project-title"><a href="#"></a></span> - <span class="project-tagline">熟悉使用  Npm &amp; Git &amp; Linux &amp; 命令行 &amp; Vim &amp; WebStrom。</span>
           </div><!--//item-->
 
           <div class="item">
-            <h3 class="level-title">CSS</h3>
-            <div class="level-bar">
-              <div class="level-bar-inner" data-level="80%">
-              </div>                                      
-            </div><!--//level-bar-->                                 
+            <span class="project-title"><a href="#"></a></span> - <span class="project-tagline">熟悉Vue,熟悉其相应响应式原理，生命周期，组件通信，虚拟DOM。</span>
+          </div><!--//item-->
+          <div class="item">
+            <span class="project-title"><a href="#"></a></span> - <span class="project-tagline">能够使用 Node.js 搭配 Express 进行基本后台开发。</span>
+          </div><!--//item-->
+          <div class="item">
+            <span class="project-title"><a href="#"></a></span> - <span class="project-tagline">了解React,redux，生命周期，可以进行一些简单的小规模项目开发。</span>
           </div><!--//item-->
 
           <div class="item">
-            <h3 class="level-title">Javascript &amp; jQuery</h3>
-            <div class="level-bar">
-              <div class="level-bar-inner" data-level="80%">
-              </div>                                      
-            </div><!--//level-bar-->                                 
+            <span class="project-title"><a href="#"></a></span> - <span class="project-tagline">了解掌握浏览器的调试，可快速寻找bug, 面向Google 及 Stack Overflow编程。</span>
           </div><!--//item-->
+        </section><!--//section-->
 
-          <div class="item">
-            <h3 class="level-title">Photoshop</h3>
-            <div class="level-bar">
-              <div class="level-bar-inner" data-level="60%">
-              </div>                                      
-            </div><!--//level-bar-->                                 
-          </div><!--//item-->
-        </div>  
-      </section><!--//skills-section-->
+        <section class="skills-section section">
+          <h2 class="section-title"><i class="fa fa-rocket"></i>关于我 &amp; About.Me</h2>
+          <div class="skillset">        
+            <div class="item">
+              <h5 class="">喜欢学习新技术，对新技术保持高涨的热情，能够突破大脑舒适区。</h5>
+            </div><!--//item-->
+            <div class="item">
+              <h5 class="">自学能力强，具备独立分析问题，解决问题的能力，能够自我突破。</h5>                            
+            </div><!--//item-->
+            <div class="item">
+              <h5 class="">在项目开发过程中，具有较强的总结能力。</h5>                              
+            </div><!--//item-->
+            <div class="item">
+              <h5 class="">有团队精神和集体荣誉感，能快速融入团队</h5>                       
+            </div><!--//item-->
+            <div class="item">
+              <h5 class="">有良好的沟通表达能力、演示能力、理解能力及逻辑思维，能快速学习相关行业知识</h5>                               
+            </div>
+          </div>  
+        </section><!--//skills-section-->
 
-    </div><!--//main-body-->
-  </div>
+      </div><!--//main-body-->
+    </div>
 
-  <footer class="footer">
-    <div class="text-center">
-      <!--/* This template is released under the Creative Commons Attribution 3.0 License. Please keep the attribution link below when using for your own project. Thank you for your support. :) If you'd like to use the template without the attribution, you can check out other license options via our website: themes.3rdwavemedia.com */-->
-      <small class="copyright"><i class="fa fa-heart"></i>  <a href="#" target="_blank"> </a>更新时间:2017年08月02日03:50:43</small>
-    </div><!--//container-->
-  </footer><!--//footer-->
+    <footer class="footer">
+      <div class="text-center">
+        <!--/* This template is released under the Creative Commons Attribution 3.0 License. Please keep the attribution link below when using for your own project. Thank you for your support. :) If you'd like to use the template without the attribution, you can check out other license options via our website: themes.3rdwavemedia.com */-->
+        <small class="copyright"><i class="fa fa-heart"></i>  <a href="#" target="_blank"> </a>更新时间:2017年08月02日03:50:43</small>
+      </div><!--//container-->
+    </footer><!--//footer-->
 
-  <!-- Javascript -->          
-  <script type="text/javascript" src="assets/plugins/jquery-1.11.3.min.js"></script>
-  <script type="text/javascript" src="assets/plugins/bootstrap/js/bootstrap.min.js"></script>    
-  <!-- custom js -->
-  <script type="text/javascript" src="assets/js/main.js"></script>            
-</body>
-  </html> 
+    <!-- Javascript -->          
+    <script type="text/javascript" src="assets/plugins/jquery-1.11.3.min.js"></script>
+    <script type="text/javascript" src="assets/plugins/bootstrap/js/bootstrap.min.js"></script>    
+    <!-- custom js -->
+    <script type="text/javascript" src="assets/js/main.js"></script>            
+  </body>
+</html> 
 
