--- a/Resume/index.html
+++ b/Resume/index.html
@@ -3,7 +3,7 @@
 <!--[if IE 9]> <html lang="en" class="ie9"> <![endif]-->  
 <!--[if !IE]><!--> <html lang="en"> <!--<![endif]-->  
   <head>
-    <title>黄鸿锐的简历</title>
+    <title>Raine Resume</title>
     <!-- Meta -->
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -86,7 +86,24 @@
           <div class="item">
             <div class="meta">
               <div class="upper-row">
-                <h3 class="job-title">Express-memo</h3>
+                <h3 class="job-title">在线简历编辑器</h3>
+                <div class="time"><a href="https://github.com/HuangHongRui/VueResume" target="_bank">项目源码</a></div>
+              </div><!--//upper-row-->
+              <div class="company">Vue</div>
+            </div><!--//meta-->
+            <div class="details">
+              <p>项目简介: 此项目是使用Vue2.0-cli实现的一个简历在线的编辑功能。清新简洁的交互系统，方便的实时预览功能能让用户快速入门操作。</p>
+              <p>项目详情: 此项目为了深入实践，尽可能采用最新的版Vue.js以及Vuex+Webpack+Scss的技术生态，js上则使用es6语法，此外，将用户登入注册信息放在leancloud上，追求最佳实践。</p>
+              <p>项目收获： vue.js以及vuex、scss的深入实践，以及es6的进一步理解。</p>
+              <p>效果地址: <a href="https://huanghongrui.github.io/VueResume/dist/#/" target="_bank">https://github.com/HuangHongRui/VueResume</a></p>
+            </div><!--//details-->
+            <hr/>
+          </div><!--//item-->
+
+          <div class="item">
+            <div class="meta">
+              <div class="upper-row">
+                <h3 class="job-title">Node.js便笺</h3>
                 <div class="time"><a href="https://github.com/HuangHongRui/Express-memo" target="_bank">项目源码</a></div>
               </div><!--//upper-row-->
               <div class="company">线上便笺</div>
