--- a/Resume/index.html
+++ b/Resume/index.html
@@ -49,8 +49,8 @@
         <div class="education-container container-block">
           <h2 class="container-block-title">个人描述</h2>
           <div class="item">
-            <h5 class="meta">我是一个对前端和美剧由衷热爱、有着轻微强迫症、注重代码规范、有趣的前端工程师。</h5>
-            <h5 class="degree">目前正在寻找前端工程师岗位的工作机会，希望借此为 贵司 献上我的一点绵薄之力，快招我到碗里来吧！</h5>
+            <h5 class="meta">我是一个对前端、运动由衷热爱、有着轻微强迫症、注重代码规范、有趣的前端工程师。</h5>
+            <p class="degree">目前正在寻找前端工程师岗位的工作机会，希望借此为 贵司 献上我的一点绵薄之力，快招我到碗里来吧！</p>
             <div class="time"></div>
           </div>
         </div>
@@ -75,8 +75,8 @@
             <p>年龄：23 | 男</p>
             <p>前端经验：1年以上</p>
             <p>求职意向：前端工程师</p>
-            <p>GitHub：<a href="https://github.com/HuangHongRui"> >> https://github.com/HuangHongRui </a></p>
-            <p>Blog：<a href="http://www.jianshu.com/u/4fe15f8f16d3"> >> http://www.jianshu.com/u/4fe15f8f16d3 </a></p>
+            <p>GitHub：<a href="https://github.com/HuangHongRui" target="bank"> >> https://github.com/HuangHongRui </a></p>
+            <p>Blog：<a href="http://www.jianshu.com/u/4fe15f8f16d3" target="bank"> >> http://www.jianshu.com/u/4fe15f8f16d3 </a></p>
           </div><!--//summary-->
         </section><!--//section-->
 
@@ -227,19 +227,19 @@
           <h2 class="section-title"><i class="fa fa-rocket"></i>关于我 &amp; About.Me</h2>
           <div class="skillset">        
             <div class="item">
-              <h5 class="">喜欢学习新技术，对新技术保持高涨的热情，能够突破大脑舒适区。</h5>
+              <p class="">喜欢学习新技术，对新技术保持高涨的热情，能够突破大脑舒适区。</p>
             </div><!--//item-->
             <div class="item">
-              <h5 class="">自学能力强，具备独立分析问题，解决问题的能力，能够自我突破。</h5>                            
+              <p class="">自学能力强，具备独立分析问题，解决问题的能力，能够自我突破。</p>                            
             </div><!--//item-->
             <div class="item">
-              <h5 class="">在项目开发过程中，具有较强的总结能力。</h5>                              
+              <p class="">在项目开发过程中，具有较强的总结能力。</p>                              
             </div><!--//item-->
             <div class="item">
-              <h5 class="">有团队精神和集体荣誉感，能快速融入团队</h5>                       
+              <p class="">有团队精神和集体荣誉感，能快速融入团队</p>                       
             </div><!--//item-->
             <div class="item">
-              <h5 class="">有良好的沟通表达能力、演示能力、理解能力及逻辑思维，能快速学习相关行业知识</h5>                               
+              <p class="">有良好的沟通表达能力、演示能力、理解能力及逻辑思维，能快速学习相关行业知识</p>                               
             </div>
           </div>  
         </section><!--//skills-section-->
@@ -250,7 +250,7 @@
     <footer class="footer">
       <div class="text-center">
         <!--/* This template is released under the Creative Commons Attribution 3.0 License. Please keep the attribution link below when using for your own project. Thank you for your support. :) If you'd like to use the template without the attribution, you can check out other license options via our website: themes.3rdwavemedia.com */-->
-        <small class="copyright"><i class="fa fa-heart"></i>  <a href="#" target="_blank"> </a>更新时间:2017年08月02日03:50:43</small>
+        <!-- <small class="copyright"><i class="fa fa-heart"></i>  <a href="#" target="_blank"> </a>更新时间:2017年08月02日03:50:43</small> -->
       </div><!--//container-->
     </footer><!--//footer-->
 
