--- a/Resume/index.html
+++ b/Resume/index.html
@@ -58,9 +58,9 @@
         <div class="interests-container container-block">
           <h2 class="container-block-title">兴趣爱好</h2>
           <ul class="list-unstyled interests-list">
-            <li><i class="fa fa-book"></i> 看书|学习新知识</li>
-            <li><i class="fa fa-futbol-o"></i> 定时健身</li>
-            <li><i class="fa fa-music"></i> 耍吉他</li>
+            <li><i class="fa fa-book"></i> 看书|学习新知识 </li>
+            <li><i class="fa fa-futbol-o"></i> 运动健身 </li>
+            <li><i class="fa fa-music"></i> 耍吉他 </li>
           </ul>
         </div><!--//interests-->
 
@@ -68,37 +68,8 @@
 
       <div class="main-wrapper">
 
-        <section class="section summary-section">
-          <h2 class="section-title"><i class="fa fa-user"></i>基本信息 | BasicInfo</h2>
-          <div class="summary">
-            <p>常用ID：Raine</p>
-            <p>年龄：23 | 男</p>
-            <p>前端经验：1年以上</p>
-            <p>求职意向：前端工程师</p>
-            <p>GitHub：<a href="https://github.com/HuangHongRui" target="bank"> >> https://github.com/HuangHongRui </a></p>
-            <p>Blog：<a href="http://www.jianshu.com/u/4fe15f8f16d3" target="bank"> >> http://www.jianshu.com/u/4fe15f8f16d3 </a></p>
-          </div><!--//summary-->
-        </section><!--//section-->
-
         <section class="section experiences-section">
           <h2 class="section-title"><i class="fa fa-briefcase"></i>个人项目 | PROJECTS</h2>
-
-          <div class="item">
-            <div class="meta">
-              <div class="upper-row">
-                <h3 class="job-title">在线简历编辑器</h3>
-                <div class="time"><a href="https://github.com/HuangHongRui/VueResume" target="_bank">项目源码</a></div>
-              </div><!--//upper-row-->
-              <div class="company">Vue</div>
-            </div><!--//meta-->
-            <div class="details">
-              <p>项目简介: 此项目是使用Vue2.0-cli实现的一个简历在线的编辑功能。清新简洁的交互系统，方便的实时预览功能能让用户快速入门操作。</p>
-              <p>项目详情: 此项目为了深入实践，尽可能采用最新的版Vue.js以及Vuex+Webpack+Scss的技术生态，js上则使用es6语法，此外，将用户登入注册信息放在leancloud上，追求最佳实践。</p>
-              <p>项目收获： vue.js以及vuex、scss的深入实践，以及es6的进一步理解。</p>
-              <p>效果地址: <a href="https://huanghongrui.github.io/VueResume/dist/#/" target="_bank">https://github.com/HuangHongRui/VueResume</a></p>
-            </div><!--//details-->
-            <hr/>
-          </div><!--//item-->
 
           <div class="item">
             <div class="meta">
@@ -120,16 +91,16 @@
           <div class="item">
             <div class="meta">
               <div class="upper-row">
-                <h3 class="job-title">TodoList</h3>
-                <div class="time"><a href="https://github.com/HuangHongRui/Vue_ToDo" target="_bank">项目源码</a></div>
+                <h3 class="job-title">在线简历编辑器</h3>
+                <div class="time"><a href="https://github.com/HuangHongRui/VueResume" target="_bank">项目源码</a></div>
               </div><!--//upper-row-->
-              <div class="company"> Vue版 </div>
+              <div class="company">Vue</div>
             </div><!--//meta-->
             <div class="details">
-              <p>技术架构：Vue + webpack +es6.</p>
-              <p>项目简介：实现注册、登录、记录事项、将用户数据存储于LeanCloud.</p>
-              <p>项目收获：第一次使用Vue开发项目，基本了解Vue.js的项目开发方式。.</p>
-              <p>效果地址: <a href="https://huanghongrui.github.io/Vue_ToDo/LeanCloud/page.html" target="_bank">https://huanghongrui.github.io/Website_Page</a></p>
+              <p>项目简介: 此项目是使用Vue2.0-cli实现的一个简历在线的编辑功能。清新简洁的交互系统，方便的实时预览功能能让用户快速入门操作。</p>
+              <p>项目详情: 此项目为了深入实践，尽可能采用最新的版Vue.js以及Vuex+Webpack+Scss的技术生态，js上则使用es6语法，此外，将用户登入注册信息放在leancloud上，追求最佳实践。</p>
+              <p>项目收获： vue.js以及vuex、scss的深入实践，以及es6的进一步理解。</p>
+              <p>效果地址: <a href="https://huanghongrui.github.io/VueResume/dist/#/" target="_bank">https://github.com/HuangHongRui/VueResume</a></p>
             </div><!--//details-->
             <hr/>
           </div><!--//item-->
@@ -147,6 +118,23 @@
               <p>项目详情: 良好的页面文档结构,使用封装组件和使用Webpack构建.</p>
               <p>项目收获：了解企业站开发模式，webpack模块化管理代码</p>
               <p>效果地址: <a href="https://huanghongrui.github.io/Website_Page/bin/" target="_bank">https://huanghongrui.github.io/Website_Page/bin</a></p>
+            </div><!--//details-->
+            <hr/>
+          </div><!--//item-->
+
+          <div class="item">
+            <div class="meta">
+              <div class="upper-row">
+                <h3 class="job-title">TodoList</h3>
+                <div class="time"><a href="https://github.com/HuangHongRui/Vue_ToDo" target="_bank">项目源码</a></div>
+              </div><!--//upper-row-->
+              <div class="company"> Vue版 </div>
+            </div><!--//meta-->
+            <div class="details">
+              <p>技术架构：Vue + webpack +es6.</p>
+              <p>项目简介：实现注册、登录、记录事项、将用户数据存储于LeanCloud.</p>
+              <p>项目收获：第一次使用Vue开发项目，基本了解Vue.js的项目开发方式。.</p>
+              <p>效果地址: <a href="https://huanghongrui.github.io/Vue_ToDo/LeanCloud/page.html" target="_bank">https://huanghongrui.github.io/Website_Page</a></p>
             </div><!--//details-->
             <hr/>
           </div><!--//item-->
@@ -221,6 +209,19 @@
           <div class="item">
             <span class="project-title"><a href="#"></a></span> - <span class="project-tagline">了解掌握浏览器的调试，可快速寻找bug, 面向Google 及 Stack Overflow编程。</span>
           </div><!--//item-->
+        </section><!--//section-->
+
+        <section class="section summary-section">
+          <h2 class="section-title"><i class="fa fa-user"></i>基本信息 | BasicInfo</h2>
+          <div class="summary">
+            <p>学历：大专</p>
+            <p>年龄：23 | 男</p>
+            <p>前端经验：1年以上</p>
+            <p>求职意向：前端工程师</p>
+            <p>期待薪资：9K－11K</p>
+            <p>GitHub：<a href="https://github.com/HuangHongRui" target="bank"> >> https://github.com/HuangHongRui </a></p>
+            <p>Blog：<a href="http://www.jianshu.com/u/4fe15f8f16d3" target="bank"> >> http://www.jianshu.com/u/4fe15f8f16d3 </a></p>
+          </div><!--//summary-->
         </section><!--//section-->
 
         <section class="skills-section section">
