--- a/Resume/index.html
+++ b/Resume/index.html
@@ -34,6 +34,14 @@
           <h1 class="name">黄 鸿锐</h1>
           <h3 class="tagline">Be the change you want to see in the world !</h3>
         </div><!--//profile-container-->
+        
+        <div class="contact-container container-block">
+          <h2 class="container-block-title">活动主页</h2>
+          <ul class="list-unstyled contact-list">
+            <li class="website"><i class="fa fa-globe"></i><a href="http://www.jianshu.com/u/4fe15f8f16d3" target="_blank">简书博客</a></li>
+            <li class="github"><i class="fa fa-github"></i><a href="https://github.com/HuangHongRui" target="_blank">github.com/Raine</a></li>
+          </ul>
+        </div>
 
         <div class="contact-container container-block">
           <h2 class="container-block-title">联系方式</h2>
@@ -42,10 +50,9 @@
             <li class="phone"><i class="fa fa-phone"></i><a href="tel:132 02220 845">132 02220 845</a></li>
             <li class="wechat"><i class="fa fa-wechat"></i><a >hr464362353</a></li>
             <li class="qq"><i class="fa fa-qq"></i><a >464362353</a></li>
-            <li class="website"><i class="fa fa-globe"></i><a href="http://www.jianshu.com/u/4fe15f8f16d3" target="_blank">简书博客</a></li>
-            <li class="github"><i class="fa fa-github"></i><a href="https://github.com/HuangHongRui" target="_blank">github.com/Raine</a></li>
           </ul>
         </div>
+
         <div class="education-container container-block">
           <h2 class="container-block-title">个人描述</h2>
           <div class="item">
@@ -203,25 +210,19 @@
             <span class="project-title"><a href="#"></a></span> - <span class="project-tagline">能够使用 Node.js 搭配 Express 进行基本后台开发。</span>
           </div><!--//item-->
           <div class="item">
-            <span class="project-title"><a href="#"></a></span> - <span class="project-tagline">了解React,redux，生命周期，可以进行一些简单的小规模项目开发。</span>
-          </div><!--//item-->
-
-          <div class="item">
             <span class="project-title"><a href="#"></a></span> - <span class="project-tagline">了解掌握浏览器的调试，可快速寻找bug, 面向Google 及 Stack Overflow编程。</span>
           </div><!--//item-->
         </section><!--//section-->
 
-        <section class="section summary-section">
+<!--         <section class="section summary-section">
           <h2 class="section-title"><i class="fa fa-user"></i>基本信息 | BasicInfo</h2>
           <div class="summary">
             <p>年龄：23 | 男</p>
-            <p>前端经验：1年以上</p>
             <p>求职意向：前端工程师</p>
-            <p>期待薪资：9K－11K</p>
             <p>GitHub：<a href="https://github.com/HuangHongRui" target="bank"> >> https://github.com/HuangHongRui </a></p>
             <p>Blog：<a href="http://www.jianshu.com/u/4fe15f8f16d3" target="bank"> >> http://www.jianshu.com/u/4fe15f8f16d3 </a></p>
-          </div><!--//summary-->
-        </section><!--//section-->
+          </div>
+        </section>--><!--//section--> 
 
         <section class="skills-section section">
           <h2 class="section-title"><i class="fa fa-rocket"></i>关于我 &amp; About.Me</h2>
