--- a/Resume/index.html
+++ b/Resume/index.html
@@ -214,15 +214,19 @@
           </div><!--//item-->
         </section><!--//section-->
 
-<!--         <section class="section summary-section">
+         <section class="section summary-section">
           <h2 class="section-title"><i class="fa fa-user"></i>基本信息 | BasicInfo</h2>
           <div class="summary">
+            <p>学历：全日制专科</p>
+            <p>专业：机电工程</p>
             <p>年龄：23 | 男</p>
+            <p>目前状态：离职</p>
+            <p>工作年限：1年</p>
             <p>求职意向：前端工程师</p>
             <p>GitHub：<a href="https://github.com/HuangHongRui" target="bank"> >> https://github.com/HuangHongRui </a></p>
             <p>Blog：<a href="http://www.jianshu.com/u/4fe15f8f16d3" target="bank"> >> http://www.jianshu.com/u/4fe15f8f16d3 </a></p>
           </div>
-        </section>--><!--//section--> 
+        </section>
 
         <section class="skills-section section">
           <h2 class="section-title"><i class="fa fa-rocket"></i>关于我 &amp; About.Me</h2>
