--- a/Resume/index.html
+++ b/Resume/index.html
@@ -66,8 +66,8 @@
           <h2 class="container-block-title">兴趣爱好</h2>
           <ul class="list-unstyled interests-list">
             <li><i class="fa fa-book"></i> 看书|学习新知识 </li>
-            <li><i class="fa fa-futbol-o"></i> 运动健身 </li>
-            <li><i class="fa fa-music"></i> 耍吉他 </li>
+            <li><i class="fa fa-futbol-o"></i> 运动 </li>
+            <li><i class="fa fa-music"></i> 音乐 </li>
           </ul>
         </div><!--//interests-->
 
@@ -77,6 +77,24 @@
 
         <section class="section experiences-section">
           <h2 class="section-title"><i class="fa fa-briefcase"></i>个人项目 | PROJECTS</h2>
+          
+          <div class="item">
+            <div class="meta">
+              <div class="upper-row">
+                <h3 class="job-title">NetEaseMusic</h3>
+                <div class="time"><a href="https://github.com/HuangHongRui/NetEaseMusic" target="_bank">项目源码</a></div>
+              </div><!--//upper-row-->
+              <div class="company">云音乐.</div>
+            </div><!--//meta-->
+            <div class="details">
+              <p>项目简介：作为一个乐迷.一个音乐播放器是不可少的.</p>
+              <p>项目详情：根据网易云的主要5个主页,而制作.分别包含:主页(包含3页切换),歌单页,播放页..</p>
+              <p>技术栈：H5 / promise / 动画 / Webpack / less</p>
+              <p>缺陷：无引入音乐API.</p>
+              <p>效果地址：<a href="http://music.luckyman.xyz/bin" target="_bank">http://music.luckyman.xyz/bin</a></p>
+            </div>
+            <hr/>
+          </div>
 
           <div class="item">
             <div class="meta">
@@ -87,13 +105,13 @@
               <div class="company">线上便笺</div>
             </div><!--//meta-->
             <div class="details">
-              <p>项目简介: 这是一个单页应用项目，进入首页可看所有用户的便签(会显示创建或更新时间与便笺主人昵称)，想要实现新增、删除、修改便签只需登录GitHub账号，数据同步，自动瀑布流排版、鼠标移动等功能。.</p>
-              <p>项目详情: 使用使用基于Node.js的Express框架实现，前端使用代码结构的组织和模块化开发方式、Webpack 和 Less 构建.后端使用Express、Nodejs调试、中间件、路由，数据库使用sequelize.最后pm2部署上线.</p>
-              <p>技术栈： Node.js/ES6/Webpack/MVC概念..</p>
-              <p>效果地址: <a href="http://memo.luckyman.xyz/" target="_bank">http://memo.luckyman.xyz</a></p>
+              <p>项目简介：这是一个单页应用项目，进入首页可看所有用户的便签(会显示创建或更新时间与便笺主人昵称)，想要实现新增、删除、修改便签只需登录GitHub账号，数据同步，自动瀑布流排版、鼠标移动等功能。.</p>
+              <p>项目详情：使用使用基于Node.js的Express框架实现，前端使用代码结构的组织和模块化开发方式、Webpack 和 Less 构建.后端使用Express、Nodejs调试、中间件、路由，数据库使用sequelize.最后pm2部署上线.</p>
+              <p>技术栈：Node.js/ES6/Webpack/MVC概念..</p>
+              <p>效果地址：<a href="http://memo.luckyman.xyz/" target="_bank">http://memo.luckyman.xyz</a></p>
             </div><!--//details-->
             <hr/>
-          </div><!--//item-->
+          </div>
 
           <div class="item">
             <div class="meta">
@@ -104,10 +122,10 @@
               <div class="company">Vue</div>
             </div><!--//meta-->
             <div class="details">
-              <p>项目简介: 此项目是使用Vue2.0-cli实现的一个简历在线的编辑功能。清新简洁的交互系统，方便的实时预览功能能让用户快速入门操作。</p>
-              <p>项目详情: 此项目为了深入实践，尽可能采用最新的版Vue.js以及Vuex+Webpack+Scss的技术生态，js上则使用es6语法，此外，将用户登入注册信息放在leancloud上，追求最佳实践。</p>
-              <p>项目收获： vue.js以及vuex、scss的深入实践，以及es6的进一步理解。</p>
-              <p>效果地址: <a href="https://huanghongrui.github.io/VueResume/dist/#/" target="_bank">https://github.com/HuangHongRui/VueResume</a></p>
+              <p>项目简介：此项目是使用Vue2.0-cli实现的一个简历在线的编辑功能。清新简洁的交互系统，方便的实时预览功能能让用户快速入门操作。</p>
+              <p>项目详情：此项目为了深入实践，尽可能采用最新的版Vue.js以及Vuex+Webpack+Scss的技术生态，js上则使用es6语法，此外，将用户登入注册信息放在leancloud上，追求最佳实践。</p>
+              <p>项目收获：vue.js以及vuex、scss的深入实践，以及es6的进一步理解。</p>
+              <p>效果地址：<a href="https://huanghongrui.github.io/VueResume/dist/#/" target="_bank">https://github.com/HuangHongRui/VueResume</a></p>
             </div><!--//details-->
             <hr/>
           </div><!--//item-->
@@ -121,10 +139,10 @@
               <div class="company">企业站实现</div>
             </div><!--//meta-->
             <div class="details">
-              <p>项目简介: 一个使用webapck模块化开发的个人企业网站.</p>
-              <p>项目详情: 良好的页面文档结构,使用封装组件和使用Webpack构建.</p>
+              <p>项目简介：一个使用webapck模块化开发的个人企业网站.</p>
+              <p>项目详情：良好的页面文档结构,使用封装组件和使用Webpack构建.</p>
               <p>项目收获：了解企业站开发模式，webpack模块化管理代码</p>
-              <p>效果地址: <a href="https://huanghongrui.github.io/Website_Page/bin/" target="_bank">https://huanghongrui.github.io/Website_Page/bin</a></p>
+              <p>效果地址：<a href="https://huanghongrui.github.io/Website_Page/bin/" target="_bank">https://huanghongrui.github.io/Website_Page/bin</a></p>
             </div><!--//details-->
             <hr/>
           </div><!--//item-->
@@ -141,7 +159,7 @@
               <p>技术架构：Vue + webpack +es6.</p>
               <p>项目简介：实现注册、登录、记录事项、将用户数据存储于LeanCloud.</p>
               <p>项目收获：第一次使用Vue开发项目，基本了解Vue.js的项目开发方式。.</p>
-              <p>效果地址: <a href="https://huanghongrui.github.io/Vue_ToDo/LeanCloud/page.html" target="_bank">https://huanghongrui.github.io/Website_Page</a></p>
+              <p>效果地址：<a href="https://huanghongrui.github.io/Vue_ToDo/LeanCloud/page.html" target="_bank">https://huanghongrui.github.io/Website_Page</a></p>
             </div><!--//details-->
             <hr/>
           </div><!--//item-->
@@ -155,10 +173,10 @@
               <div class="company">封装 &amp; 插件库</div>
             </div>
             <div class="details">
-              <p>轮__播： <a href="https://huanghongrui.github.io/UI_Module/Carousel%20%7C%20%E5%B7%A6%E5%8F%B3%E8%BD%AE%E6%92%AD/index.html" target="_blank"> 效果预览 </a>.</p>
-              <p>懒加载： <a href="https://huanghongrui.github.io/UI_Module/Expose%20%7C%20%E6%9B%9D%E5%85%89/index.html" target="_blank"> 效果预览 </a>.</p>
-              <p>瀑布流： <a href="https://huanghongrui.github.io/SomeDemo/Cascade%20%7C%20%E7%80%91%E5%B8%83%E6%B5%81/index.html" target="_blank"> 效果预览 </a>.</p>
-              <p>木桶流： <a href="https://huanghongrui.github.io/UI_Module/Wooden%20%7C%20%E6%9C%A8%E6%A1%B6%E6%B5%81/index.html" target="_blank"> 效果预览 </a>.</p>
+              <p>轮__播：<a href="https://huanghongrui.github.io/UI_Module/Carousel%20%7C%20%E5%B7%A6%E5%8F%B3%E8%BD%AE%E6%92%AD/index.html" target="_blank"> 效果预览 </a>.</p>
+              <p>懒加载：<a href="https://huanghongrui.github.io/UI_Module/Expose%20%7C%20%E6%9B%9D%E5%85%89/index.html" target="_blank"> 效果预览 </a>.</p>
+              <p>瀑布流：<a href="https://huanghongrui.github.io/SomeDemo/Cascade%20%7C%20%E7%80%91%E5%B8%83%E6%B5%81/index.html" target="_blank"> 效果预览 </a>.</p>
+              <p>木桶流：<a href="https://huanghongrui.github.io/UI_Module/Wooden%20%7C%20%E6%9C%A8%E6%A1%B6%E6%B5%81/index.html" target="_blank"> 效果预览 </a>.</p>
             </div>
           </div>
         </section><!--//section-->
