--- a/Resume/index.html
+++ b/Resume/index.html
@@ -3,7 +3,7 @@
 <!--[if IE 9]> <html lang="en" class="ie9"> <![endif]-->  
 <!--[if !IE]><!--> <html lang="en"> <!--<![endif]-->  
   <head>
-    <title>Raine Resume</title>
+    <title>Rui Resume</title>
     <!-- Meta -->
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -29,19 +29,20 @@
   <body>
     <div class="wrapper">
       <div class="sidebar-wrapper">
-        <div class="profile-container">
-          <img class="profile" src="assets/images/1.jpg" alt="" />
-          <h1 class="name">黄 鸿锐</h1>
-          <h3 class="tagline">Be the change you want to see in the world !</h3>
-        </div><!--//profile-container-->
-        
-        <div class="contact-container container-block">
-          <h2 class="container-block-title">活动主页</h2>
-          <ul class="list-unstyled contact-list">
-            <li class="website"><i class="fa fa-globe"></i><a href="http://www.jianshu.com/u/4fe15f8f16d3" target="_blank">简书博客</a></li>
-            <li class="github"><i class="fa fa-github"></i><a href="https://github.com/HuangHongRui" target="_blank">github.com/Raine</a></li>
-          </ul>
+
+        <div class="contact-container container-block" style=" text-align:center; ">
+          <h1 style="letter-spacing: 5px; text-align: center; font-size: 50px; font-weight: 400; margin-bottom: 26px;">黄鸿锐</h1>
+            <p>应聘职位：前端开发</p>
+              <p>意向城市：深圳</p>
         </div>
+
+         <div class="education-container container-block">
+          <h2 class="container-block-title">个人描述</h2>
+          <div class="item">
+            <p class="degree">1年前端开发经验，熟悉 HTML、CSS、Javascript，能熟练开发符合 W3C 标准的页面， 熟练使用jQuery，有React,Vue开发经验，有良好的编码习惯以及熟练使用开发调试工具，了解前端工程化如webpack glup。</p>
+          </div>
+        </div>
+
 
         <div class="contact-container container-block">
           <h2 class="container-block-title">联系方式</h2>
@@ -53,48 +54,32 @@
           </ul>
         </div>
 
-        <div class="education-container container-block">
-          <h2 class="container-block-title">个人描述</h2>
-          <div class="item">
-            <h5 class="meta">我是一个对前端、运动由衷热爱、有着轻微强迫症、注重代码规范、有趣的前端工程师。</h5>
-            <p class="degree">目前正在寻找前端工程师岗位的工作机会，希望借此为 贵司 献上我的一点绵薄之力，快招我到碗里来吧！</p>
-            <div class="time"></div>
-          </div>
-        </div>
-
-        <div class="interests-container container-block">
-          <h2 class="container-block-title">兴趣爱好</h2>
-          <ul class="list-unstyled interests-list">
-            <li><i class="fa fa-book"></i> 看书|学习新知识 </li>
-            <li><i class="fa fa-futbol-o"></i> 运动 </li>
-            <li><i class="fa fa-music"></i> 音乐 </li>
-          </ul>
-        </div><!--//interests-->
-
       </div><!--//sidebar-wrapper-->
 
       <div class="main-wrapper">
 
         <section class="section experiences-section">
-          <h2 class="section-title"><i class="fa fa-briefcase"></i>个人项目 | PROJECTS</h2>
-          
+          <h2 class="section-title"><i class="fa fa-briefcase"></i>项目经验 | PROJECTS</h2>
+
+
           <div class="item">
             <div class="meta">
               <div class="upper-row">
-                <h3 class="job-title">NetEaseMusic</h3>
-                <div class="time"><a href="https://github.com/HuangHongRui/NetEaseMusic" target="_bank">项目源码</a></div>
+                <h3 class="job-title">任务进度管理</h3>
+                <div class="time"><a href="https://github.com/HuangHongRui/rui_react" target="_bank">项目源码</a></div>
               </div><!--//upper-row-->
-              <div class="company">云音乐.</div>
+              <div class="company">周期15天</div>
             </div><!--//meta-->
             <div class="details">
-              <p>项目简介：作为一个乐迷.一个音乐播放器是不可少的.</p>
-              <p>项目详情：根据网易云的主要5个主页,而制作.分别包含:主页(包含3页切换),歌单页,播放页..</p>
-              <p>技术栈：H5 / promise / 动画 / Webpack / less</p>
-              <p>缺陷：无引入音乐API.</p>
-              <p>效果地址：<a href="http://music.luckyman.xyz/bin" target="_bank">http://music.luckyman.xyz/bin</a></p>
+              <p>项目简介：TodoList 是一个轻量的在线单页待办事项管理应用，支持注册、登录、使用注册邮箱找回密码，可在线对待办事项进行分组、增删改查等管理操作，对分组也同样支持增删改查等管理操作，云同步。视觉样式借鉴了 Wunderlist 的 UI 设计。</p>
+              <p>技术细节：整个项目基于 React，采用 ES6 的语法.</p>
+              <p>技术栈：React / Webpack / CSS</p>
+              <p>效果地址：<a href="http://todo.luckyman.xyz/build" target="_bank">todo.luckyman.xyz/build</a></p>
             </div>
             <hr/>
           </div>
+
+
 
           <div class="item">
             <div class="meta">
@@ -102,28 +87,47 @@
                 <h3 class="job-title">Node.js便笺</h3>
                 <div class="time"><a href="https://github.com/HuangHongRui/Express-memo" target="_bank">项目源码</a></div>
               </div><!--//upper-row-->
-              <div class="company">线上便笺</div>
+              <div class="company">周期15天</div>
             </div><!--//meta-->
             <div class="details">
               <p>项目简介：这是一个单页应用项目，进入首页可看所有用户的便签(会显示创建或更新时间与便笺主人昵称)，想要实现新增、删除、修改便签只需登录GitHub账号，数据同步，自动瀑布流排版、鼠标移动等功能。.</p>
-              <p>项目详情：使用使用基于Node.js的Express框架实现，前端使用代码结构的组织和模块化开发方式、Webpack 和 Less 构建.后端使用Express、Nodejs调试、中间件、路由，数据库使用sequelize.最后pm2部署上线.</p>
-              <p>技术栈：Node.js/ES6/Webpack/MVC概念..</p>
+              <p>技术详情：使用使用基于Node.js的Express框架实现，前端使用代码结构的组织和模块化开发方式、Webpack 和 Less 构建.后端使用Express、Nodejs调试、中间件、路由，数据库使用sequelize.最后PM2部署上线.</p>
+              <p>技术栈：Node.js/ES6/Webpack</p>
               <p>效果地址：<a href="http://memo.luckyman.xyz/" target="_bank">http://memo.luckyman.xyz</a></p>
             </div><!--//details-->
             <hr/>
           </div>
 
+
           <div class="item">
             <div class="meta">
               <div class="upper-row">
-                <h3 class="job-title">在线简历编辑器</h3>
-                <div class="time"><a href="https://github.com/HuangHongRui/VueResume" target="_bank">项目源码</a></div>
+                <h3 class="job-title">NetEaseMusic云音乐.</h3>
+                <div class="time"><a href="https://github.com/HuangHongRui/NetEaseMusic" target="_bank">项目源码</a></div>
               </div><!--//upper-row-->
-              <div class="company">Vue</div>
+              <div class="company">周期8天.</div>
             </div><!--//meta-->
             <div class="details">
-              <p>项目简介：此项目是使用Vue2.0-cli实现的一个简历在线的编辑功能。清新简洁的交互系统，方便的实时预览功能能让用户快速入门操作。</p>
-              <p>项目详情：此项目为了深入实践，尽可能采用最新的版Vue.js以及Vuex+Webpack+Scss的技术生态，js上则使用es6语法，此外，将用户登入注册信息放在leancloud上，追求最佳实践。</p>
+              <p>项目简介：根据网易云的主要5个主页而制作.分别包含:主页(包含3页切换),歌单页,播放页,基本实现网易云的所有功能..</p>
+              <p>项目详情：做此项目的原因是因为喜欢音乐，其次是为了吃熟原生，所以全部使用原生JavaScript实现，另外，为了稳定基本使用，放弃了使用API,所以导致无法搜索更多歌曲。</p>
+              <p>技术栈：JavaScript / Webpack / less</p>
+              <p>效果地址：<a href="http://music.luckyman.xyz/bin" target="_bank">http://music.luckyman.xyz/bin</a></p>
+            </div>
+            <hr/>
+          </div>
+
+
+          <div class="item">
+            <div class="meta">
+              <div class="upper-row">
+                <h3 class="job-title">简历编辑器.</h3>
+                <div class="time"><a href="https://github.com/HuangHongRui/VueResume" target="_bank">项目源码</a></div>
+              </div><!--//upper-row-->
+              <div class="company">周期5天</div>
+            </div><!--//meta-->
+            <div class="details">
+              <p>项目简介：使用Vue2.0-cli实现的一个简历在线的编辑功能。清新简洁的交互系统，方便的实时预览功能能让用户快速入门操作。 可以动态生成一份样式简约的简历。支持注册和登陆，支持预览。 </p>
+              <p>项目详情：为了深入实践，尽可能采用最新的版Vue以及Vuex状态管理+Webpack+Scss的技术生态，Js上使用es6语法，此外，将用户登入注册信息放在leancloud上，追求最佳实践。</p>
               <p>项目收获：vue.js以及vuex、scss的深入实践，以及es6的进一步理解。</p>
               <p>效果地址：<a href="https://huanghongrui.github.io/VueResume/dist/#/" target="_bank">https://github.com/HuangHongRui/VueResume</a></p>
             </div><!--//details-->
@@ -136,136 +140,56 @@
                 <h3 class="job-title">Corporate Website</h3>
                 <div class="time"><a href="https://github.com/HuangHongRui/Website_Page" target="_bank">项目源码</a></div>
               </div><!--//upper-row-->
-              <div class="company">企业站实现</div>
+              <div class="company">漫画站实现</div>
             </div><!--//meta-->
             <div class="details">
-              <p>项目简介：一个使用webapck模块化开发的个人企业网站.</p>
-              <p>项目详情：良好的页面文档结构,使用封装组件和使用Webpack构建.</p>
-              <p>项目收获：了解企业站开发模式，webpack模块化管理代码</p>
+              <p>项目简介：一个使用webapck模块化开发的漫画网站,对日常封装的轮播、懒加载、瀑布流布局、回到顶 部组件，进行组合做了一个首页。.</p>
+              <p>项目详情：良好的页面文档结构,由于涉及较多 dom 操作，封装的时候选择使用 jQuery，整个页面用 webpack 打包了一次，同时也对比使用了 requirejs.
+              </p>
+              <p>项目收获：对项目打包有更深刻的认识，明白Webpack和模块化对前端的益处</p>
               <p>效果地址：<a href="https://huanghongrui.github.io/Website_Page/bin/" target="_bank">https://huanghongrui.github.io/Website_Page/bin</a></p>
             </div><!--//details-->
             <hr/>
           </div><!--//item-->
 
-          <div class="item">
-            <div class="meta">
-              <div class="upper-row">
-                <h3 class="job-title">TodoList</h3>
-                <div class="time"><a href="https://github.com/HuangHongRui/Vue_ToDo" target="_bank">项目源码</a></div>
-              </div><!--//upper-row-->
-              <div class="company"> Vue版 </div>
-            </div><!--//meta-->
-            <div class="details">
-              <p>技术架构：Vue + webpack +es6.</p>
-              <p>项目简介：实现注册、登录、记录事项、将用户数据存储于LeanCloud.</p>
-              <p>项目收获：第一次使用Vue开发项目，基本了解Vue.js的项目开发方式。.</p>
-              <p>效果地址：<a href="https://huanghongrui.github.io/Vue_ToDo/LeanCloud/page.html" target="_bank">https://huanghongrui.github.io/Website_Page</a></p>
-            </div><!--//details-->
-            <hr/>
-          </div><!--//item-->
-
-          <div class="item">
-            <div class="meta">
-              <div class="upper-row">
-                <h3 class="job-title">UI_Module:</h3>
-                <div class="time"><a href="https://github.com/HuangHongRui/UI_Module" target="_bank">仓库源码</a></div>
-              </div>
-              <div class="company">封装 &amp; 插件库</div>
-            </div>
-            <div class="details">
-              <p>轮__播：<a href="https://huanghongrui.github.io/UI_Module/Carousel%20%7C%20%E5%B7%A6%E5%8F%B3%E8%BD%AE%E6%92%AD/index.html" target="_blank"> 效果预览 </a>.</p>
-              <p>懒加载：<a href="https://huanghongrui.github.io/UI_Module/Expose%20%7C%20%E6%9B%9D%E5%85%89/index.html" target="_blank"> 效果预览 </a>.</p>
-              <p>瀑布流：<a href="https://huanghongrui.github.io/SomeDemo/Cascade%20%7C%20%E7%80%91%E5%B8%83%E6%B5%81/index.html" target="_blank"> 效果预览 </a>.</p>
-              <p>木桶流：<a href="https://huanghongrui.github.io/UI_Module/Wooden%20%7C%20%E6%9C%A8%E6%A1%B6%E6%B5%81/index.html" target="_blank"> 效果预览 </a>.</p>
-            </div>
-          </div>
         </section><!--//section-->
 
         <section class="section projects-section">
           <h2 class="section-title"><i class="fa fa-archive"></i>掌握技能 | Skill</h2>
           <div class="intro">
           </div><!--//intro-->
-          <h4>HTML &amp; CSS</h4>
           <div class="item">
-            <span class="project-title"><a href="#"></a></span> - <span class="project-tagline">熟悉HTML、CSS、页面架构和布局，对Web标准和标签语义化有深入理解。</span>
+            <span class="project-title"><a href="#"></a></span> - <span class="project-tagline">熟练掌握HTML(5)和常用CSS(3)，具有 像素级还原设计稿的能力。具有平均水准之上的审美，追求设计的优雅。</span>
           </div>
           <div class="item">
-            <span class="project-title"><a href="#"></a></span> - <span class="project-tagline">熟悉并能使用Scss，less和Stylus，postcss预处理器编写前端样式。</span>
+            <span class="project-title"><a href="#"></a></span> - <span class="project-tagline">熟练掌握原生Javascript，掌握重要概念如：<b>原型，闭包，作用域链，面向对象，异步流程控制</b>等。能够根据面向对象思想利用JS/jQuery <b>封装</b>常用插件。 熟练使用 <b>ES6</b>部分新特性。</span>
           </div><!--//item-->
           <div class="item">
-            <span class="project-title"><a href="#"></a></span> - <span class="project-tagline">了解及HTML5新标签及CSS3样式及动画。</span>
+            <span class="project-title"><a href="#"></a></span> - <span class="project-tagline">熟悉<b>React、Vue</b>框架及相关流行库的使用，理解React的重要概念如：生命周期，异步更新，性能优化，虚拟DOM（DCG）等。熟悉Vue的生命周期，组件通讯，虚拟DOM等概念</span>
           </div>
           <div class="item">
-            <span class="project-title"><a href="#"></a></span> - <span class="project-tagline">了解移动端开发与微信小程序开发。</span>
-          </div><!--//item-->
-
-          <h4>JavaScript</h4>
-          <div class="item">
-            <span class="project-title"><a href="#"></a></span> - <span class="project-tagline">熟悉原生Javascript，能脱离jQuery等类库编码。</span>
-          </div><!--//item-->
-          <div class="item">
-            <span class="project-title"><a href="#"></a></span> - <span class="project-tagline">能运用模块化、面向对象的方式编程。</span>
-          </div><!--//item-->
-          <div class="item">
-            <span class="project-title"><a href="#"></a></span> - <span class="project-tagline">了解HTTP协议，以及熟悉运用Ajax通过JSON数据接口与后台数据接口进行数据交互。</span>
-          </div><!--//item-->
-          <div class="item">
-            <span class="project-title"><a href="#"></a></span> - <span class="project-tagline">熟悉掌握原生Javascript，掌握重要概念如： 原型， 闭包， 作用域链， 面向对象， 异步流程控制等。能够根据面向对象思想利用JS/jQuery 封装 常用插件。</span>
-          </div>
-
-          <h4>Tool &amp; Frame</h4>
-          <div class="item">
-            <span class="project-title"><a href="#"></a></span> - <span class="project-tagline">能够使用Webpack、gulp、requirejs前端构建工具搭建前端开发环境。</span>
-          </div><!--//item-->
-          <div class="item">
-            <span class="project-title"><a href="#"></a></span> - <span class="project-tagline">熟悉使用  Npm &amp; Git &amp; Linux &amp; 命令行 &amp; Vim &amp; WebStrom。</span>
+            <span class="project-title"><a href="#"></a></span> - <span class="project-tagline">了解<b>AJAX</b>的原理及应用，了解 JSONP、CORS 等跨域解决方案，能与后端程序员配合实现动态页面。</span>
           </div><!--//item-->
 
           <div class="item">
-            <span class="project-title"><a href="#"></a></span> - <span class="project-tagline">熟悉Vue,熟悉其相应响应式原理，生命周期，组件通信，虚拟DOM。</span>
+            <span class="project-title"><a href="#"></a></span> - <span class="project-tagline">熟悉<b>HTTP协议</b>及浏览器渲染原理，了解前端<b> 性能优化</b>策略。</span>
           </div><!--//item-->
           <div class="item">
-            <span class="project-title"><a href="#"></a></span> - <span class="project-tagline">能够使用 Node.js 搭配 Express 进行基本后台开发。</span>
+            <span class="project-title"><a href="#"></a></span> - <span class="project-tagline">熟悉Npm & Git，能够使用Node.js搭配Express进行基本后台开发。</span>
           </div><!--//item-->
           <div class="item">
-            <span class="project-title"><a href="#"></a></span> - <span class="project-tagline">了解掌握浏览器的调试，可快速寻找bug, 面向Google 及 Stack Overflow编程。</span>
+            <span class="project-title"><a href="#"></a></span> - <span class="project-tagline">熟悉<b>CMD&AMD</b>机制，熟悉Webpack打包</span>
           </div><!--//item-->
+          <div class="item">
+            <span class="project-title"><a href="#"></a></span> - <span class="project-tagline">能阅读英文文档，面向Google及Stack Overflow编程。 拥有认真总结，书写技术 博客(点击查看)的习惯</span>
+          </div>
+
+          <div class="item">
+            <span class="project-title"><a href="#"></a></span> - <span class="project-tagline">追求风格优雅，整洁的代码。</span>
+          </div><!--//item-->
+
         </section><!--//section-->
 
-         <section class="section summary-section">
-          <h2 class="section-title"><i class="fa fa-user"></i>基本信息 | BasicInfo</h2>
-          <div class="summary">
-            <p>学历：全日制专科</p>
-            <p>专业：机电工程</p>
-            <p>年龄：23 | 男</p>
-            <p>目前状态：离职</p>
-            <p>工作年限：1年</p>
-            <p>求职意向：前端工程师</p>
-            <p>GitHub：<a href="https://github.com/HuangHongRui" target="bank"> >> https://github.com/HuangHongRui </a></p>
-            <p>Blog：<a href="http://www.jianshu.com/u/4fe15f8f16d3" target="bank"> >> http://www.jianshu.com/u/4fe15f8f16d3 </a></p>
-          </div>
-        </section>
-
-        <section class="skills-section section">
-          <h2 class="section-title"><i class="fa fa-rocket"></i>关于我 &amp; About.Me</h2>
-          <div class="skillset">        
-            <div class="item">
-              <p class="">喜欢学习新技术，对新技术保持高涨的热情，能够突破大脑舒适区。</p>
-            </div><!--//item-->
-            <div class="item">
-              <p class="">自学能力强，具备独立分析问题，解决问题的能力，能够自我突破。</p>                            
-            </div><!--//item-->
-            <div class="item">
-              <p class="">在项目开发过程中，具有较强的总结能力。</p>                              
-            </div><!--//item-->
-            <div class="item">
-              <p class="">有团队精神和集体荣誉感，能快速融入团队</p>                       
-            </div><!--//item-->
-            <div class="item">
-              <p class="">有良好的沟通表达能力、演示能力、理解能力及逻辑思维，能快速学习相关行业知识</p>                               
-            </div>
-          </div>  
-        </section><!--//skills-section-->
 
       </div><!--//main-body-->
     </div>
@@ -281,7 +205,7 @@
     <script type="text/javascript" src="assets/plugins/jquery-1.11.3.min.js"></script>
     <script type="text/javascript" src="assets/plugins/bootstrap/js/bootstrap.min.js"></script>    
     <!-- custom js -->
-    <script type="text/javascript" src="assets/js/main.js"></script>            
+    <script type="text/javascript" src="assets/js/main.js"></script>
   </body>
 </html> 
 
