--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="./index.css">
-    <script src="//at.alicdn.com/t/font_394454_g083j3zdjkrwl8fr.js"></script>
+    <link rel="stylesheet" href="src/src/index.css">
+    <script src="//at.alicdn.com/t/font_394454_6a9itne9jk9e8kt9.js"></script>
     <title>黄鸿锐的简历</title>
 </head>
 
@@ -20,7 +20,11 @@
                 <!-- <p>PROGROMER.</p> -->
             </h1>
             <p class="about left-in-init">
-               1年前端开发经验，熟悉 HTML、CSS、Javascript，能熟练开发符合 W3C 标准的页面， 熟练使用jQuery，有React,Vue开发经验，有良好的编码习惯以及熟练使用开发调试工具，了解前端工程化如webpack glup。
+               思维灵活发散，强大的自我驱动
+能力。在独立项目开发过程中有
+优秀的新技术学习、问题分析解
+决能力。善于倾听和交流，具有
+团队精神，能够有效解决问题
             </p>
             <div class="social left-in-init">
                 <a href="mailto:464362353@qq.com">
@@ -38,8 +42,13 @@
                         <use xlink:href="#icon-github"></use>
                     </svg>
                 </a>
+                <a href="./src/src/resume.pdf">
+                    <svg class="icon">
+                        <use xlink:href="#icon-pdf"></use>
+                    </svg>
+                </a>
             </div>
-            <a class="contact-me left-in-init" href="#contact">Contact Me！</a>
+            <a class="contact-me left-in-init" href="#contact">联系方式</a>
         </div>
     </div>
     <div class="content-wrapper">
@@ -47,7 +56,7 @@
             <li class="react-todo">
                 <div class="project-number"></div>
                 <div class="project-img-wrapper">
-                    <img class="bottom-in-init" src="img/todoR.png" alt="1">
+                    <img class="bottom-in-init" src="src/src/img/todoR.png" alt="1">
                 </div>
                 <div class="project-information">
                     <h4 class="title">ToDo在线应用.</h4>
@@ -76,7 +85,7 @@
                          <li class="ai-robot">
                 <div class="project-number"></div>
                 <div class="project-img-wrapper">
-                        <img  class="bottom-in-init" src="img/memoR.png" alt="5">
+                        <img class="bottom-in-init" src="src/src/img/memoR.png" alt="5">
                 </div>
                 <div class="project-information">
                     <h4 class="title">Node.js在线便笺.</h4>
@@ -108,7 +117,7 @@
             <li class="react-music">
                 <div class="project-number"></div>
                 <div class="project-img-wrapper">
-                    <img class="bottom-in-init" src="img/musicR.png" alt="3">
+                    <img class="bottom-in-init" src="src/src/img/musicR.png" alt="3">
                 </div>
                 <div class="project-information">
                     <h4 class="title">NetEaseMusic.</h4>
@@ -136,7 +145,7 @@
                        <li class="vue-resume">
                 <div class="project-number"></div>
                 <div class="project-img-wrapper">
-                    <img class="bottom-in-init" src="img/vueR.png" alt="2">
+                    <img class="bottom-in-init" src="src/src/img/vueR.png" alt="2">
                 </div>
                 <div class="project-information">
                     <h4 class="title">在线简历生成器.</h4>
@@ -166,7 +175,7 @@
             <li class="wheels">
                 <div class="project-number"></div>
                 <div class="project-img-wrapper">
-                    <img class="bottom-in-init" src="img/webpageR.png" alt="4">
+                    <img class="bottom-in-init" src="src/src/img/webpageR.png" alt="4">
                 </div>
                 <div class="project-information">
                     <h4 class="title">组件化首页.</h4>
@@ -234,7 +243,7 @@
                 <h3>联系方式</h3>
                 <div class="contact-wrapper">
                     <div class="wechat">
-                        <img src="img/qrCode.jpg" alt="">
+                        <img src="src/src/img/qrCode.jpg" alt="">
                     </div>
                     <ul class="contact-item" id="contact">
                         <li>
