--- a/Resume/index.html
+++ b/Resume/index.html
@@ -36,23 +36,29 @@
               <p>意向城市：深圳</p>
         </div>
 
-         <div class="education-container container-block">
-          <h2 class="container-block-title">个人描述</h2>
-          <div class="item">
-            <p class="degree">1年前端开发经验，熟悉 HTML、CSS、Javascript，能熟练开发符合 W3C 标准的页面， 熟练使用jQuery，有React,Vue开发经验，有良好的编码习惯以及熟练使用开发调试工具，了解前端工程化如webpack glup。</p>
-          </div>
-        </div>
-
-
         <div class="contact-container container-block">
           <h2 class="container-block-title">联系方式</h2>
           <ul class="list-unstyled contact-list">
             <li class="email"><i class="fa fa-envelope"></i><a href="mailto: 464362353@qq.com">464362353@qq.com</a></li>
             <li class="phone"><i class="fa fa-phone"></i><a href="tel:132 02220 845">132 02220 845</a></li>
-            <li class="wechat"><i class="fa fa-wechat"></i><a >hr464362353</a></li>
-            <li class="qq"><i class="fa fa-qq"></i><a >464362353</a></li>
+            <li class="github"><i class="fa fa-github"></i>github.com/HuangHongRui</li>
+            <li class="github"><i class="fa" style="font-size: 16px; font-weight: 600;">在线简历:</i>resume.luckyman.xyz</li>
+            <li class="github"><i class="fa" style="font-size: 16px; font-weight: 600;">技术博客:</i>http://www.jianshu.com/u/4fe15f8f16d3</li>
           </ul>
         </div>
+
+         <div class="education-container container-block">
+          <h2 class="container-block-title">个人描述</h2>
+          <div class="item">
+            <p class="degree">思维灵活发散，强大的自我驱动
+能力。在独立项目开发过程中有
+优秀的新技术学习、问题分析解
+决能力。善于倾听和交流，具有
+团队精神，能够有效解决问题</p>
+          </div>
+        </div>
+
+
 
       </div><!--//sidebar-wrapper-->
 
@@ -68,7 +74,7 @@
                 <h3 class="job-title">任务进度管理</h3>
                 <div class="time"><a href="https://github.com/HuangHongRui/rui_react" target="_bank">项目源码</a></div>
               </div><!--//upper-row-->
-              <div class="company">周期15天</div>
+              <div class="company"></div>
             </div><!--//meta-->
             <div class="details">
               <p>项目简介：TodoList 是一个轻量的在线单页待办事项管理应用，支持注册、登录、使用注册邮箱找回密码，可在线对待办事项进行分组、增删改查等管理操作，对分组也同样支持增删改查等管理操作，云同步。视觉样式借鉴了 Wunderlist 的 UI 设计。</p>
@@ -87,7 +93,7 @@
                 <h3 class="job-title">Node.js便笺</h3>
                 <div class="time"><a href="https://github.com/HuangHongRui/Express-memo" target="_bank">项目源码</a></div>
               </div><!--//upper-row-->
-              <div class="company">周期15天</div>
+              <div class="company"></div>
             </div><!--//meta-->
             <div class="details">
               <p>项目简介：这是一个单页应用项目，进入首页可看所有用户的便签(会显示创建或更新时间与便笺主人昵称)，想要实现新增、删除、修改便签只需登录GitHub账号，数据同步，自动瀑布流排版、鼠标移动等功能。.</p>
@@ -105,7 +111,7 @@
                 <h3 class="job-title">NetEaseMusic云音乐.</h3>
                 <div class="time"><a href="https://github.com/HuangHongRui/NetEaseMusic" target="_bank">项目源码</a></div>
               </div><!--//upper-row-->
-              <div class="company">周期8天.</div>
+              <div class="company"></div>
             </div><!--//meta-->
             <div class="details">
               <p>项目简介：根据网易云的主要5个主页而制作.分别包含:主页(包含3页切换),歌单页,播放页,基本实现网易云的所有功能..</p>
@@ -123,7 +129,7 @@
                 <h3 class="job-title">简历编辑器.</h3>
                 <div class="time"><a href="https://github.com/HuangHongRui/VueResume" target="_bank">项目源码</a></div>
               </div><!--//upper-row-->
-              <div class="company">周期5天</div>
+              <div class="company"></div>
             </div><!--//meta-->
             <div class="details">
               <p>项目简介：使用Vue2.0-cli实现的一个简历在线的编辑功能。清新简洁的交互系统，方便的实时预览功能能让用户快速入门操作。 可以动态生成一份样式简约的简历。支持注册和登陆，支持预览。 </p>
@@ -140,7 +146,7 @@
                 <h3 class="job-title">Corporate Website</h3>
                 <div class="time"><a href="https://github.com/HuangHongRui/Website_Page" target="_bank">项目源码</a></div>
               </div><!--//upper-row-->
-              <div class="company">漫画站实现</div>
+              <div class="company"></div>
             </div><!--//meta-->
             <div class="details">
               <p>项目简介：一个使用webapck模块化开发的漫画网站,对日常封装的轮播、懒加载、瀑布流布局、回到顶 部组件，进行组合做了一个首页。.</p>
