--- a/src/src/index.html
+++ b/src/src/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="src/src/index.css">
+    <link rel="stylesheet" href="index.css">
     <script src="//at.alicdn.com/t/font_394454_6a9itne9jk9e8kt9.js"></script>
     <title>黄鸿锐的简历</title>
 </head>
@@ -42,7 +42,7 @@
                         <use xlink:href="#icon-github"></use>
                     </svg>
                 </a>
-                <a href="./src/src/resume.pdf">
+                <a href="resume.pdf">
                     <svg class="icon">
                         <use xlink:href="#icon-pdf"></use>
                     </svg>
@@ -56,7 +56,7 @@
             <li class="react-todo">
                 <div class="project-number"></div>
                 <div class="project-img-wrapper">
-                    <img class="bottom-in-init" src="src/src/img/todoR.png" alt="1">
+                    <img class="bottom-in-init" src="img/todoR.png" alt="1">
                 </div>
                 <div class="project-information">
                     <h4 class="title">ToDo在线应用.</h4>
@@ -85,7 +85,7 @@
                          <li class="ai-robot">
                 <div class="project-number"></div>
                 <div class="project-img-wrapper">
-                        <img class="bottom-in-init" src="src/src/img/memoR.png" alt="5">
+                        <img class="bottom-in-init" src="img/memoR.png" alt="5">
                 </div>
                 <div class="project-information">
                     <h4 class="title">Node.js在线便笺.</h4>
@@ -117,7 +117,7 @@
             <li class="react-music">
                 <div class="project-number"></div>
                 <div class="project-img-wrapper">
-                    <img class="bottom-in-init" src="src/src/img/musicR.png" alt="3">
+                    <img class="bottom-in-init" src="img/musicR.png" alt="3">
                 </div>
                 <div class="project-information">
                     <h4 class="title">NetEaseMusic.</h4>
@@ -145,7 +145,7 @@
                        <li class="vue-resume">
                 <div class="project-number"></div>
                 <div class="project-img-wrapper">
-                    <img class="bottom-in-init" src="src/src/img/vueR.png" alt="2">
+                    <img class="bottom-in-init" src="img/vueR.png" alt="2">
                 </div>
                 <div class="project-information">
                     <h4 class="title">在线简历生成器.</h4>
@@ -175,7 +175,7 @@
             <li class="wheels">
                 <div class="project-number"></div>
                 <div class="project-img-wrapper">
-                    <img class="bottom-in-init" src="src/src/img/webpageR.png" alt="4">
+                    <img class="bottom-in-init" src="img/webpageR.png" alt="4">
                 </div>
                 <div class="project-information">
                     <h4 class="title">组件化首页.</h4>
@@ -243,7 +243,7 @@
                 <h3>联系方式</h3>
                 <div class="contact-wrapper">
                     <div class="wechat">
-                        <img src="src/src/img/qrCode.jpg" alt="">
+                        <img src="img/qrCode.jpg" alt="">
                     </div>
                     <ul class="contact-item" id="contact">
                         <li>
