--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta charset="utf-8">
     <title>黄鸿锐 - 个人简历</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="dist/index.css">
     <script>
         (function (i, s, o, g, r, a, m) {
             i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
@@ -28,13 +28,13 @@
     <!--[if lte IE 8]><div class="lte-ie8-comment-wrapper"><p class="lte-ie8-comment">你正在使用 IE8 或更老的古董浏览器，还是快升级或者换浏览器吧~</p></div><![endif]-->
     <aside>
         <ul class="links">
-            <li class="link"><a href="Rui.pdf">PDF 下载</a></li>
+            <li class="link"><a href="dist/Rui.pdf">PDF 下载</a></li>
         </ul>
     </aside>
     <div class="container">
         <main>
             <header class="row">
-                <figure class="header-qrcode"><img src="static/wechat.jpg" alt="liyu940906" class="qrcode-img invisible-lt-sm visible-print" /></figure>
+                <figure class="header-qrcode"><img src="dist/static/wechat.jpg" alt="liyu940906" class="qrcode-img invisible-lt-sm visible-print" /></figure>
                 <section class="title">
                     <h1>黄鸿锐</h1>
                     <h2>前端工程师</h2>
